[gd_scene load_steps=6 format=3 uid="uid://gsibulkr5nt"]

[ext_resource type="Script" path="res://addons/m_terrain/gui/image_creator_window.gd" id="1_ietn6"]
[ext_resource type="PackedScene" uid="uid://c2pjojed3ox4q" path="res://addons/m_terrain/gui/gui_part/data_compress_option.tscn" id="2_ty6od"]
[ext_resource type="PackedScene" uid="uid://bt4wolcb7b55e" path="res://addons/m_terrain/gui/gui_part/file_compress.tscn" id="3_ldhh5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bk6nk"]
content_margin_left = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h7iju"]
content_margin_left = 5.0

[node name="image_creator_window" type="Window"]
title = "MTerrain Image Creator"
initial_position = 1
size = Vector2i(550, 400)
script = ExtResource("1_ietn6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="uniform_name" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/uniform_name"]
layout_mode = 2
text = "Uniform name:"

[node name="uniform_name_line" type="LineEdit" parent="VBoxContainer/uniform_name"]
layout_mode = 2
size_flags_horizontal = 3

[node name="uniform_name2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/uniform_name2"]
layout_mode = 2
text = "Format"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/uniform_name2"]
layout_mode = 2
item_count = 12
selected = 2
popup/item_0/text = "FORMAT_L8"
popup/item_0/id = 0
popup/item_1/text = "FORMAT_LA8"
popup/item_1/id = 1
popup/item_2/text = "FORMAT_R8"
popup/item_2/id = 2
popup/item_3/text = "FORMAT_RG8"
popup/item_3/id = 3
popup/item_4/text = "FORMAT_RGB8"
popup/item_4/id = 4
popup/item_5/text = "FORMAT_RGBA8"
popup/item_5/id = 5
popup/item_6/text = "FORMAT_RGBA4444"
popup/item_6/id = 6
popup/item_7/text = "FORMAT_RGB565"
popup/item_7/id = 7
popup/item_8/text = "FORMAT_RF"
popup/item_8/id = 8
popup/item_9/text = "FORMAT_RGF"
popup/item_9/id = 9
popup/item_10/text = "FORMAT_RGBF"
popup/item_10/id = 10
popup/item_11/text = "FORMAT_RGBAF"
popup/item_11/id = 11

[node name="def_color" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/def_color"]
layout_mode = 2
text = "Default Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/def_color"]
layout_mode = 2
text = "-------------"

[node name="hb2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/hb2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bk6nk")
text = "Compress"

[node name="data_compress_option" parent="VBoxContainer/hb2" instance=ExtResource("2_ty6od")]
layout_mode = 2

[node name="hb3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/hb3"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_h7iju")
text = "File Compress"

[node name="file_compress" parent="VBoxContainer/hb3" instance=ExtResource("3_ldhh5")]
layout_mode = 2

[node name="create" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="no_terrain" type="Label" parent="VBoxContainer"]
modulate = Color(1, 0.219608, 0.266667, 1)
layout_mode = 2
text = "No active Terrain, Please select the terrain and open this again"

[node name="no_terrain2" type="Label" parent="VBoxContainer"]
visible = false
modulate = Color(1, 0.219608, 0.266667, 1)
layout_mode = 2
text = "Uniform name is empty"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="rlabel" type="Label" parent="VBoxContainer"]
modulate = Color(1, 0.219608, 0.266667, 1)
layout_mode = 2
text = "Remove DATA"

[node name="uniform_name3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/uniform_name3"]
layout_mode = 2
text = "Uniform name:"

[node name="remove_uniform_list" type="OptionButton" parent="VBoxContainer/uniform_name3"]
layout_mode = 2

[node name="remove" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Remove"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="button_up" from="VBoxContainer/create" to="." method="_on_create_button_up"]
[connection signal="button_up" from="VBoxContainer/remove" to="." method="_on_remove_button_up"]
